--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
     </head>
 
 <body>
+    <div id="modal"></div>
     <div id="root">Not rendered</div>
-
     <script src="App.js"></script>
 </body>
 </html>
+
